# JezykiProgramowania_mod4

./: CMakeLists.txt  dane2.txt  info.txt  liczby1.txt  liczby2.txt  tekst.txt  z3.cpp  z4.cpp  z5.cpp  z6.cpp  z7.cpp  z8.cpp  z9.cpp  zadanie.cpp
