cmake_minimum_required(VERSION 3.13)
project(test)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../")

add_executable(zadanie zadanie.cpp)
add_executable(zadanie3 z3.cpp)
add_executable(zadanie4 z4.cpp)
add_executable(zadanie5 z5.cpp)
add_executable(zadanie6 z6.cpp)
add_executable(zadanie7 z7.cpp)
add_executable(zadanie8 z8.cpp)
add_executable(zadanie9 z9.cpp)